--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شركة النماء للاستيراد والتصدير الزراعي</title>
+    <title>شركة هيلثي تشويس للاستيراد والتصدير الزراعي</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -79,7 +79,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo">🍀 النماء للتصدير</a>
+        <a href="#" class="logo">🍀 هيلثي تشويس للتصدير</a>
         <nav>
             <ul>
                 <li><a href="#">الرئيسية</a></li>
@@ -108,7 +108,7 @@
         </div>
         <div class="feature-card">
             <i class="fas fa-globe-europe"></i>
-            <h3>تصدير لجميع القارات</h3>
+            <h3>تصدير لجميع دول العالم </h3>
             <p>نصل بمنتجاتنا إلى أوروبا، الخليج العربي، وآسيا.</p>
         </div>
     </section>
@@ -118,17 +118,20 @@
         <div class="products-grid">
             <div class="product-item">
                 <img src="https://images.unsplash.com/photo-1557844352-761f2565b576?auto=format&fit=crop&w=500&q=60" alt="خضروات">
-                <div class="product-overlay"><h3>الخضروات الطازجة</h3><p>فاصوليا، فلفل، بطاطس</p></div>
+                <div class="product-overlay"><h3>الخضروات الطازجة</h3><p>فاصوليا، فلفل الوان و شطه، بطاطس</p></div>
             </div>
             <div class="product-item">
-                <img src="https://images.unsplash.com/photo-1523472553351-36f88e13ec04?auto=format&fit=crop&w=500&q=60" alt="موالح">
-                <div class="product-overlay"><h3>الموالح</h3><p>برتقال صيفي، أبو سرة، ليمون</p></div>
+                <img src="https://arabic.korea.net/NewsFocus/Business/view?articleId=132010"موالح">
+                <div class="product-overlay"><h3>الموالح</h3><p>متخصصون في تصدير جميع انواع الفراوله بأجود انواعها </p></div>
             </div>
             <div class="product-item">
-                <img src="https://images.unsplash.com/photo-1512149177596-f817c7ef5d4c?auto=format&fit=crop&w=500&q=60" alt="بصل">
-                <div class="product-overlay"><h3>البصل والثوم</h3><p>بصل أحمر، بصل ذهبي، ثوم أبيض</p></div>
+                <img src="https://www.alarabiya.net/medicine-and-health/2023/10/18/%D8%B7%D8%A8%D9%8A%D8%A8-%D9%8A%D9%83%D8%B4%D9%81-%D9%85%D8%A7-%D9%84%D8%A7-%D9%86%D8%AA%D9%88%D9%82%D8%B9%D9%87-%D8%B9%D9%86-%D8%A7%D9%84%D8%A8%D8%B5%D9%84-%D9%88%D8%A7%D9%84%D8%AB%D9%88%D9%85" alt="بصل">
+                <div class="product-overlay"><h3>البصل والثوم</h3><p>بصل أحمر، بصل ذهبي، ثوم أحمر </p></div>
             </div>
-        </div>
+            </div class="product-item">
+                <img src="https://ar.pngtree.com/free-backgrounds-photos/%D8%A8%D9%82%D9%88%D9%84%D9%8A%D8%A7%D8%AA">
+                <div class="product-overlay"><h3>البقوليات</h3><p>جميع انواع البقوليات </p></div>
+    </div>
     </section>
 
     <section id="contact" class="contact-section">
@@ -149,7 +152,7 @@
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
-        <p>جميع الحقوق محفوظة &copy; 2026 شركة النماء للتصدير</p>
+        <p>جميع الحقوق محفوظة &copy; 2026 شركة هيلثي تشويس للتصدير</p>
     </footer>
 
 </body>
