--- a/index.html
+++ b/index.html
@@ -127,12 +127,23 @@
             <div class="product-item">
                 <img src="https://www.alarabiya.net/medicine-and-health/2023/10/18/%D8%B7%D8%A8%D9%8A%D8%A8-%D9%8A%D9%83%D8%B4%D9%81-%D9%85%D8%A7-%D9%84%D8%A7-%D9%86%D8%AA%D9%88%D9%82%D8%B9%D9%87-%D8%B9%D9%86-%D8%A7%D9%84%D8%A8%D8%B5%D9%84-%D9%88%D8%A7%D9%84%D8%AB%D9%88%D9%85" alt="بصل">
                 <div class="product-overlay"><h3>البصل والثوم</h3><p>بصل أحمر، بصل ذهبي، ثوم أحمر </p></div>
-            </div>
-            </div class="product-item">
-                <img src="https://ar.pngtree.com/free-backgrounds-photos/%D8%A8%D9%82%D9%88%D9%84%D9%8A%D8%A7%D8%AA">
-                <div class="product-overlay"><h3>البقوليات</h3><p>جميع انواع البقوليات </p></div>
     </div>
     </section>
+    <section id="products" class="products-section">
+    <h2 style="font-size: 2.5rem; color: var(--main-color); margin-bottom: 5px;">البقوليات</h2>
+    <p style="font-size: 1.2rem; color: #666; margin-bottom: 30px;">تصدير جميع أنواع البقوليات</p>
+    
+    <div class="products-grid">
+        <div class="product-item">
+            <img src="https://images.unsplash.com/photo-1551462147-ff29053fad07?auto=format&fit=crop&w=500&q=60" alt="فاصوليا">
+            <div class="product-overlay">
+                <h3>فاصوليا بيضاء</h3>
+                <p>نخب أول للتصدير</p>
+            </div>
+        </div>
+        
+        </div>
+</section>
 
     <section id="contact" class="contact-section">
         <h2 style="margin-bottom: 2rem;">تواصل معنا</h2>
