--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="product-overlay"><h3>الموالح</h3><p>متخصصون في تصدير جميع انواع الفراوله بأجود انواعها </p></div>
             </div>
             <div class="product-item">
-                <img src="https://www.alarabiya.net/medicine-and-health/2023/10/18/%D8%B7%D8%A8%D9%8A%D8%A8-%D9%8A%D9%83%D8%B4%D9%81-%D9%85%D8%A7-%D9%84%D8%A7-%D9%86%D8%AA%D9%88%D9%82%D8%B9%D9%87-%D8%B9%D9%86-%D8%A7%D9%84%D8%A8%D8%B5%D9%84-%D9%88%D8%A7%D9%84%D8%AB%D9%88%D9%85" alt="بصل">
+                <img src="https://www.alarabiya.net/medicine-and-health/2023/10/18/%D8%B7%D8%A8%D9%8A%D8%A8-%D9%8A%D9%83%D8%B4%D9%81-%D9%85%D8%A7-%D9%84%D8%A7-%D9%86%D8%AA%D9%88%D9%82%D8%B9%D9%87-%D8%B9%D9%86-%D8%A7%D9%84%D8%A8%D8%B5%D9%84-%D9%88%D8%A7%D9%84%D8%AB%D9%88%D9%85"
                 <div class="product-overlay"><h3>البصل والثوم</h3><p>بصل أحمر، بصل ذهبي، ثوم أحمر </p></div>
     </div>
     </section>
@@ -135,10 +135,9 @@
     
     <div class="products-grid">
         <div class="product-item">
-            <img src="https://images.unsplash.com/photo-1551462147-ff29053fad07?auto=format&fit=crop&w=500&q=60" alt="فاصوليا">
+            <img src="https://images.unsplash.com/photo-1551462147-ff29053fad07?auto=format&fit=crop&w=500&q=60" alt="
             <div class="product-overlay">
-                <h3>فاصوليا بيضاء</h3>
-                <p>نخب أول للتصدير</p>
+
             </div>
         </div>
         
